<resources>
    <string name="title_home">Home</string>
    <string name="GoogleMapsApiKey">AIzaSyAZrE7MEKpJVJ-DbGC4FKJDNTBoWxTfWWY</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_first_screen">FunKadaa</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="web_client_id">113491668536-i64qoefqsc5h7l1c66t154kt4i6ebnn7.apps.googleusercontent.com</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">242938859597827</string>
    <string name="fb_login_protocol_scheme">fb242938859597827</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">3UFXE9yFUbzwcFMpj2imFfSyb</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">JMtj9kaYRXonCNpKBpNC96J3LagjBFTNGkBmUjbz4FAquJRtly</string>
    <string name="apptitle">FunKadaa</string>
    <string name="Follow">Follow</string>
    <string name="app_name">FunKadaa</string>
    <string name="invite" >Invite</string>
    <string name="posts">Posts</string>
    <string name="name">Name</string>
    <string name="phone">Phone#</string>
    <string name="signup">Sign Up</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="verfication">Enter verfication code</string>
    <string name="verify">Verify</string>
    <string name="choosephoto">Choose Photo</string>
    <string name="uploadpicture">Upload Picture</string>
    <string name="map">Map</string>
    <string name="signout">Signout</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

</resources>
